# Luma

./: .gitignore  CMakeLists.txt  README.md  generate_antlr.sh
grammar/: LumaLexer.g4  LumaParser.g4
src/: main.cpp
src/ast/: AstNode.h  Definition.h  Expression.h  Statement.h
src/codegen/: CodeGen.cpp  CodeGen.h
src/common/: ErrorDef.h  ErrorHandler.cpp  ErrorHandler.h  Global.h
src/llvmgen/: LLVMGen.cpp  LLVMGen.h
src/mir/: MIRBasicBlock.h  MIRFunction.h  MIRInstruction.h  MIRModule.h  MIRNode.h  MIRTerminator.cpp  MIRTerminator.h  MIRType.h  MIRValue.h
src/mirgen/: MIRGen.cpp  MIRGen.h
src/parser/: AstBuilder.cpp  AstBuilder.h
src/sema/: SemanticAnalyzer.h
src/semantic/: SemanticAnalysis.cpp  SemanticAnalysis.h  Symbol.cpp  Symbol.h
src/types/: Type.h  TypeTranslate.cpp  TypeTranslate.h
tests/luma_sources/: temp.luma  test.luma
tests/luma_sources/test/: final.luma  for.luma  func.luma  if.luma  vardecl.luma
